# fast-audiomentations

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
bench/: __main__.py  host.py  registry.py  rows.py  run.py  validators.py
benchmark/: add_background_noise_benchmark.py  band_pass_benchmark.py  band_stop_benchmark.py  benchmark_data.py  benchmark_tool.py  clip_benchmark.py  gain_benchmark.py  high_pass_benchmark.py  low_pass_benchmark.py  run_all.py
benchmark_local_result/: add_background_noise.txt  band_pass.txt  band_stop.txt  clip.txt  gain.txt  high_pass_filter.txt  low_pass_filter.txt
examples/: clip.py  gain.py  low_pass_filter.py  test.py
fast_audiomentations/: __init__.py
fast_audiomentations/functions/: audio_io.py
fast_audiomentations/transforms/: add_background_noise.py  band_pass_filter.py  band_stop_filter.py  clip.py  fused_pointwise.py  gain.py  high_pass_filter.py  low_pass_filter.py  polarity_inversion.py  reverse.py
fast_audiomentations/transforms/_impl/: _clip_triton.py  _filter_triton.py  _gain_triton.py  _mix_triton.py  _pointwise_triton.py  _polarity_triton.py  _reverse_triton.py
tests/data/: dupl.sh
